2013-01-24 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
	* Return key display running informations

2013-01-23 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Add new syntax style for config file.

2013-01-17 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
	* Add --quiet option to reduce verbosity

2012-11-09 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Release: 0.9.2